--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
 html{height:100%;margin:0;padding:0}
 
-body{margin:0;height:100%}
+body{margin:0; height:100%}
+
+
+div{
+    background-color: antiquewhite;
+    padding-top:10px;
+    padding-right:150px;
+    padding-bottom:100px;
+    padding-left:150px;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 28px;
+}
