--- a/css/pub.css
+++ b/css/pub.css
@@ -1,4 +1,7 @@
 table {
     border-collapse: separate;
     border-spacing: 0 20px;
+    padding-top:50px;
+    padding-right:50px;
+    padding-left:60px;
 }
